# planning-engine

./: .gitignore  CALENDAR_PLANNER_FIX.md  CLUSTERS_COLUMN_FEATURE.md  DEPLOYMENT.md  FEATURES.md  MAP_VISUALIZATION_FIX.md  MULTI_DAY_QUICKSTART.md  README.md  RENDER_QUICKSTART.md  SEQUENTIAL_CLUSTER_PLANNING.md  create_user.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: deploy.yml
.windsurf/rules/: python-uv-env.md
apps/api/: auth.py  main.py
apps/web/: .env.development  .env.production  README.md  index.html  package.json  vite.config.js
deploy/: README.md  deploy.sh  initial-setup.sh  update.sh
deploy/nginx/: planning-engine.conf
deploy/systemd/: planning-engine-api.service  planning-engine-web.service
docs/: WORKSPACE_GUIDE.md
examples/: SWAGGER_PLAN_INSTRUCTIONS.md  acme.xlsx  cluster_demo.py  complete_workflow.py  fixed_crew_demo.py  geocode_demo.py  parse_excel_demo.py  parse_excel_no_street2.py  plan_request_example.json  plan_request_simple.json  run_plan.py  run_plan_ortools.py  workspace_demo.py
src/planning_engine/: __init__.py  api.py  calendar_wrapper.py  cluster_validation.py  load_sites.py  models.py  multi_day_scheduler.py  ortools_solver.py  paths.py  progress_tracking.py  team_management.py  team_schedule.py  team_schedule_csv.py  visualization.py
src/scripts/: demo_cluster_validation.py  test_calendar_fixed_crews.py  (+13 more)
tests/: test_geocoding_errors.py  test_ortools_integration.py  test_parse_excel.py  test_parse_excel_optional.py  test_plan.py  test_team_management.py  test_team_schedule.py  test_workspace.py
(+50 files in other folders)
