[project]
name = "planning-engine"
version = "0.1.0"
description = "Routing and scheduling planning engine"
requires-python = ">=3.13"
readme = "README.md"
authors = [
    { name = "Rich Johnson", email = "rich.johnson@wwt.com" }
]
dependencies = [
  "pydantic>=2.5",
  "ortools>=9.8",
  "numpy",
  "pytest>=9.0.2",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "openpyxl>=3.1.5",
  "scikit-learn>=1.8.0",
  "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
